--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -1,8 +1,8 @@
 $primary-color-dark: #111629;
-$primary-color: #f40;
+$primary-color: #c3161c;
 $primary-color-light: #253364;
 $primary-color-text: #ffffff;
-$accent-color: #f7a71a;
+$accent-color: #ffd300;
 $web-color:#3f87c7;
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
