--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -1,1 +1,78 @@
-navbar
+<div class="container">
+  <div class="row">
+    <div class="col-auto">
+      <div class="primary-logo">
+        <a href="https://www.iceland.co.uk/" title="Wada | your trusted partner">
+          <img class="logo" src="assets/images/logo.png" alt="" />
+        </a>
+      </div>
+    </div>
+    <div class="col pt-2">
+      <form class="search-box form-inline mt-2 mt-md-0">
+        <input class="form-control " type="text" placeholder="Search" aria-label="Search">
+        <button class="btn my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
+      </form>
+    </div>
+    <div class="col-auto pt-2">
+      <div class="form-inline mt-2 mt-md-0">
+        <input type="text" class="form-control" id="reserveDelivery" placeholder="Reserve your delivery">
+        <div class="input-group-append">
+          <div class="input-group-text"><img class="search-icon" src="assets/images/svgs/van.svg" alt="" /></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-auto pt-2">
+      <div class="cart form-inline mt-2 mt-md-0">
+        <input type="text" class="form-control" id="cart" placeholder="৳22000">
+        <div class="input-group-append">
+          <div class="input-group-text"><img class="search-icon" src="assets/images/svgs/basket.svg" alt="" /> &nbsp;
+            <span class="cart-count">12</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="mt-3 border-bottom"></div>
+
+<nav class="navbar navbar-expand-lg border-bottom">
+  <div class="container">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
+      aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExample07">
+
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active" ngbDropdown>
+          <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown1" role="button">
+            Menu
+          </a>
+          <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
+            <a *ngFor="let cat of categoryTree.category" ngbDropdownItem href="#"
+              (click)="$event.preventDefault()">{{cat.name}}</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Free Delivery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Offers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">৳100 Value</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Frozen</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">New</a>
+        </li>
+
+      </ul>
+
+    </div>
+  </div>
+</nav>
