--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -115,10 +115,10 @@
       <!-- End Footer List Box -->
     </div>
     <div class="payment-method text-center">
-      <a href="#" class="wobble-vertical"><img src="assets/dummy/home4/pay1.png" alt=""></a>
-      <a href="#" class="wobble-vertical"><img src="assets/dummy/home4/pay2.png" alt=""></a>
-      <a href="#" class="wobble-vertical"><img src="assets/dummy/home4/pay3.png" alt=""></a>
-      <a href="#" class="wobble-vertical"><img src="assets/dummy/home4/pay4.png" alt=""></a>
+      <a href="#" class="wobble-vertical"><img src="assets/images/pay1.png" alt=""></a>
+      <a href="#" class="wobble-vertical"><img src="assets/images/pay2.png" alt=""></a>
+      <a href="#" class="wobble-vertical"><img src="assets/images/pay3.png" alt=""></a>
+      <a href="#" class="wobble-vertical"><img src="assets/images/pay4.png" alt=""></a>
     </div>
     <!-- End Payment -->
     <div class="footer-tabs">
