--- a/src/home/components/fotter/fotter.component.scss
+++ b/src/home/components/fotter/fotter.component.scss
@@ -160,15 +160,15 @@ input:hover {
 }
 
 .contact-footer-box.footer-box p.formule-address::before {
-  background: rgba(0, 0, 0, 0) url(/assets/dummy/home4/for1.png) no-repeat scroll 0 0;
+  background: rgba(0, 0, 0, 0) url(/assets/images/for1.png) no-repeat scroll 0 0;
 }
 
 .contact-footer-box.footer-box p.formule-phone::before {
-  background: rgba(0, 0, 0, 0) url(/assets/dummy/home4/for2.png) no-repeat scroll left 4px;
+  background: rgba(0, 0, 0, 0) url(/assets/images/for2.png) no-repeat scroll left 4px;
 }
 
 .contact-footer-box.footer-box p.formule-email::before {
-  background: rgba(0, 0, 0, 0) url(/assets/dummy/home4/for3.png) no-repeat scroll left 4px;
+  background: rgba(0, 0, 0, 0) url(/assets/images/for3.png) no-repeat scroll left 4px;
 }
 
 .contact-footer-box.footer-box p a {
