--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-auto">
       <div class="primary-logo">
-        <a href="https://www.iceland.co.uk/" title="Wada | your trusted partner">
+        <a routerLink="/" title="Wada | your trusted partner">
           <img class="logo" src="assets/images/logo.png" alt="" />
         </a>
       </div>
