--- a/src/shared/components/offer-box/offer-box.component.html
+++ b/src/shared/components/offer-box/offer-box.component.html
@@ -2,7 +2,7 @@
   <img [alt]="offer.slug" src="assets/images/offers/{{offer.slug}}.jpg">
   <div class="d-flex justify-content-between offer-content">
     <div class="offer-dialog">{{offer.dialog}}</div>
-    <a class="btn btn-sm btn-success offer-button" routerLink="/">{{offer.button_text}}</a>
+    <a class="btn btn-sm btn-success offer-button" [routerLink]="offer.links">{{offer.button_text}}</a>
   </div>
 </div>
 <!-- <hr>
