--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -71,10 +71,11 @@
               <h2 class="title14">Stay Connected</h2>
               <div class="list-social">
                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
+                <a href="#"> <i class="fa fa-youtube-play" aria-hidden="true"></i> </a>
                 <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                <!-- <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a> -->
+                <!-- <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> -->
               </div>
             </div>
           </div>
