--- a/src/home/containers/category/category.component.html
+++ b/src/home/containers/category/category.component.html
@@ -1,1 +1,88 @@
-<p>category works! {{slug}}</p>
+<!-- <div class="container-fluid">
+  <div class="banner">
+    <img src="assets/images/categories/fresh_banner.jpg" alt="Banner s">
+  </div>
+
+</div> -->
+<!-- Container for sidebar(s) + page content -->
+
+
+<div class="container-fluid">
+  <img class="banner-image" src="assets/images/categories/fresh_banner.jpg" alt="Banner s">
+</div>
+<div class="container">
+  <div class="banner-links">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+        <!-- <li class="breadcrumb-item"><a href="#">{{slug}}</a></li> -->
+        <li class="breadcrumb-item active" aria-current="page">{{slug}}</li>
+      </ol>
+    </nav>
+    <h2 class="banner-title">{{slug}}</h2>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-left p-0">
+      <h5 class="filter-title">Filters</h5>
+      <div class="refinement-header">
+        <span>Category</span>
+      </div>
+      <div class="sub-category">
+        <div class="sub-category-item my-2 ml-2" *ngFor="let sc of subCategory">
+          {{sc.name}}
+        </div>
+        <!-- {{subCategory | json}} -->
+      </div>
+
+      <div class="refinement-header">
+        <span>Price</span>
+      </div>
+
+      <form>
+        <div class="form-check my-1">
+          <input class="form-check-input" type="radio" name="priceRange" id="0to100" value="0to100">
+          <label class="form-check-label" for="0to100">
+            ৳0 - ৳100
+          </label>
+        </div>
+        <div class="form-check my-1">
+          <input class="form-check-input" type="radio" name="priceRange" id="101to500" value="101to500">
+          <label class="form-check-label" for="101to500">
+            ৳101 - ৳500
+          </label>
+        </div>
+        <div class="form-check my-1">
+          <input class="form-check-input" type="radio" name="priceRange" id="501to1000" value="501to1000">
+          <label class="form-check-label" for="501to1000">
+            ৳501 - ৳1000
+          </label>
+        </div>
+        <div class="form-check my-1">
+          <input class="form-check-input" type="radio" name="priceRange" id="1001to5000" value="1001to5000">
+          <label class="form-check-label" for="1001to5000">
+            ৳1001 - ৳5000
+          </label>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="from">From</label>
+            <input type="text" class="form-control" id="from">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="to">To</label>
+            <input type="text" class="form-control" id="to">
+          </div>
+        </div>
+      </form>
+
+      <div class="refinement-header">
+        <span>Brand</span>
+      </div>
+    </div>
+    <div class="col-right">Products</div>
+  </div>
+</div>
