--- a/src/home/containers/category/category.component.scss
+++ b/src/home/containers/category/category.component.scss
@@ -1,4 +1,9 @@
 @import '../../../assets/theme.scss';
+:host {
+  display: block;
+  background: #f8f8f9 none repeat scroll 0 0;
+  z-index: 0;
+}
 
 .banner-image {
   width: 100%;
@@ -7,7 +12,7 @@
 
 .banner-links {
   margin-top: -130px;
-  margin-bottom: 120px;
+  margin-bottom: 60px;
 }
 
 .breadcrumb {
@@ -37,18 +42,22 @@
 .col-right {
   position: relative;
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  // padding-left: 15px;
+  // margin: 0 20px;
+  margin-bottom: 20px;
 }
 
 .col-left {
   flex: 0 0 220px;
   max-width: 220px;
+  padding: 15px;
+  background-color: white;
 }
 
 .col-right {
   flex: 0 0 calc(100% - 220px);
   max-width: calc(100% - 220px);
+  padding: 0 10px;
 }
 
 .filter {
@@ -57,18 +66,17 @@
   }
 }
 
-
-
 .refinement-header {
   font-size: 18px;
   font-weight: 300;
   line-height: 1.20833;
   margin: 0;
+  z-index: 10;
   position: relative;
 }
 
 .refinement-header span {
-  z-index: 1;
+  z-index: 10;
   padding-right: 8px;
   background: white;
 }
@@ -77,11 +85,12 @@
   content: "";
   display: block;
   width: 100%;
-  height: 1px;
-  background: #d8d8d8;
+  height: 2px;
+  background: $divider-color;
+  // background: blue;
   position: absolute;
-  z-index: -10;
   top: calc(50% - 1px);
+  z-index: -1;
 }
 
 .sub-category-item {
