--- a/src/home/containers/register/register.component.html
+++ b/src/home/containers/register/register.component.html
@@ -1,1 +1,20 @@
-<p>register works!</p>
+<div class="container">
+    <div class="row py-2">
+        <div class="col-auto d-flex align-items-center">
+            <i class="fa fa-angle-left"></i> &nbsp;
+            <a routerLink="/" class="home-link">Home</a>
+        </div>
+        <div class="col text-center">
+            <img class="logo" src="assets/images/logo.png" alt="" />
+        </div>
+    </div>
+</div>
+<div class="register">
+    <div class="register-title">Create an account</div>
+    <div class="register-dialog">It's easy and quick to create an online account</div>
+    <div class="container my-4">
+        <div class="offset-md-2 col-md-8">
+            <user-details-form></user-details-form>
+        </div>
+    </div>
+</div>
