--- a/src/home/components/topbar/topbar.component.html
+++ b/src/home/components/topbar/topbar.component.html
@@ -24,13 +24,13 @@
         <div class="dropdown-divider"></div>
         <div class="px-4">
           <h4 class="text-center text-success">New to wada ? </h4>
-          <button type="submit" class="btn btn-block btn-sm btn-success">Creat an Account</button>
+          <a routerLink="/register" class="btn btn-block btn-sm btn-success">Creat an Account</a>
         </div>
       </div>
     </div>
     <div class="m-2 border-right"></div>
     <div class="p-2">
-      <a class="link user" href="https://www.iceland.co.uk/account/register" title="Register"><span>Register</span></a>
+      <a class="link user" routerLink="/register" title="Register"><span>Register</span></a>
     </div>
 
     <div class="p-2">
