--- a/src/home/containers/register/register.component.html
+++ b/src/home/containers/register/register.component.html
@@ -14,7 +14,7 @@
     <div class="register-dialog">It's easy and quick to create an online account</div>
     <div class="container my-4">
         <div class="offset-md-2 col-md-8">
-            <user-details-form></user-details-form>
+            <user-details-form (user)="onUserReg($event)"></user-details-form>
         </div>
     </div>
 </div>
