--- a/src/home/components/topbar/topbar.component.html
+++ b/src/home/components/topbar/topbar.component.html
@@ -1,25 +1,55 @@
 <div class="container">
   <div class="d-flex flex-row-reverse bd-highlight">
 
-    <div ngbDropdown class="p-2">
+    <div ngbDropdown class="p-2" *ngIf="!authService.isAuthenticated()">
       <a class="link user" tabindex="0" ngbDropdownToggle id="loginform" role="button">
         Login
       </a>
       <div ngbDropdownMenu aria-labelledby="loginform">
         <h4 class="text-center text-primary">Log in</h4>
         <p class="px-4 text-center">Sign in to see your favourites, complete your order or manage your account. </p>
-        <form class="px-4 pb-3">
+        <form class="px-4 pb-3" [formGroup]="form" (ngSubmit)="submit()">
           <div class="form-group">
             <!-- <label for="exampleDropdownFormEmail1">Email address</label> -->
-            <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+            <input type="text" class="form-control" id="phone" formControlName="phone" autocomplete="no"
+              placeholder="Phone number" maxlength="11">
+            <small class="text-danger" *ngIf=" form.controls.phone.errors && form.controls.phone.touched ">
+              <div [hidden]="!form.controls['phone'].errors.required"> Phone number required </div>
+              <div [hidden]="!form.controls['phone'].errors.pattern"> Phone number format 01934953023
+              </div>
+            </small>
           </div>
           <div class="form-group">
             <!-- <label for="exampleDropdownFormPassword1">Password</label> -->
-            <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-          </div>
+            <div class="input-group mb-1 mb-sm-0">
+              <input [type]="showPassword ? 'text' : 'password'" id="password" class="form-control"
+                placeholder="Password" formControlName="password">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" (click)="showPassword = !showPassword">
+                  <i class="fa fa-eye" [ngClass]="showPassword?'fa-eye-slash':'fa-eye'"></i>
+                </button>
+              </div>
+            </div>
 
-          <button type="submit" class="btn btn-block btn-sm btn-primary">Sign in</button>
-          <a href="" class="my-2">Forgot Password?</a>
+            <small class="text-danger" *ngIf="form.controls.password.errors && form.controls.password.touched">
+              <div [hidden]="!form.controls['password'].errors.required">
+                Password required
+              </div>
+              <div [hidden]="!form.controls['password'].errors.minlength">
+                Minimum passwor length required 6
+              </div>
+            </small>
+
+            <small>
+              <a routerLink="/password-reset">Lost your password?</a>
+            </small>
+          </div>
+          <!-- <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-primary" [class.disabled]="form.invalid">Log in</button>
+          </div> -->
+          <button type="submit" class="btn btn-block btn-sm btn-primary" [class.disabled]="form.invalid">Sign
+            in</button>
+          <!-- <a href="" class="my-2">Forgot Password?</a> -->
         </form>
         <div class="dropdown-divider"></div>
         <div class="px-4">
@@ -28,8 +58,14 @@
         </div>
       </div>
     </div>
+    <div class="p-2" *ngIf="authService.isAuthenticated()" (click)="onLogout()">
+      <a class="link user" title="Register"><span>Logout</span></a>
+    </div>
     <div class="m-2 border-right"></div>
-    <div class="p-2">
+    <div class="p-2" *ngIf="authService.isAuthenticated()">
+      <a class="link user" routerLink="/dashboard" title="Register"><span>Dashboard</span></a>
+    </div>
+    <div class="p-2" *ngIf="!authService.isAuthenticated()">
       <a class="link user" routerLink="/register" title="Register"><span>Register</span></a>
     </div>
 
