reset password updated

--- a/src/dashboard/users/containers/reset-password/reset-password.component.html
+++ b/src/dashboard/users/containers/reset-password/reset-password.component.html
@@ -1,1 +1,32 @@
-<p>reset-password works!</p>
+<div class="container-fluid component-head">
+    <h3>Change Password</h3>
+</div>
+
+<div class="container">
+    <loading *ngIf="loading"></loading>
+    <div class="alert alert-success alert-dismissible show" role="alert" *ngIf="message.length > 0">
+        <strong>Success! </strong> {{ message }}
+        <button type="button" class="close" (click)="onClose()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="alert alert-danger alert-dismissible show" role="alert" *ngIf="errorMessage.length > 0">
+        <strong>Failed! </strong> {{ errorMessage }}
+        <button type="button" class="close" (click)="onClose()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+    <div class="row" *ngIf="!loading">
+        <div class="col-md-6 col-12">
+            <nav class="navbar navbar-light bg-light border">
+                <a class="navbar-brand">User List</a>
+            </nav>
+            <user-list [users]="users" (edit)="onEdit($event)"></user-list>
+        </div>
+        <div class="col-md-6 col-12" *ngIf="user && showPasswordForm">
+            <reset-password-form [user]="user" (cancel)="onClose()" (changePass)="onPasswordChange($event)">
+            </reset-password-form>
+        </div>
+    </div>
+</div>
