dash board product added

--- a/src/dashboard/containers/change-password/change-password.component.html
+++ b/src/dashboard/containers/change-password/change-password.component.html
@@ -1,1 +1,73 @@
-<p>change-password works!</p>
+<div class="container-fluid component-head">
+    <h3>Change password</h3>
+</div>
+
+<div class="container">
+
+    <div class="row">
+        <div class="offset-md-2 col-md-8 col-12 bg-white">
+            <div class="alert alert-success alert-dismissible show" role="alert" *ngIf="message.length > 0">
+                <strong>Success! </strong> {{ message }}
+                <button type="button" class="close" (click)="onClose()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="alert alert-danger alert-dismissible show" role="alert" *ngIf="errorMessage.length > 0">
+                <strong>Failed! </strong> {{ errorMessage }}
+                <button type="button" class="close" (click)="onClose()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <loading *ngIf="loading"></loading>
+
+            <nav *ngIf="!loading" class="navbar navbar-light bg-light border border-bottom-0">
+                <a class="navbar-brand">Change password form</a>
+            </nav>
+
+            <form *ngIf="!loading" [formGroup]="form" (ngSubmit)="submit()" class="p-3 border">
+                <div class="form-group row">
+                    <label for="password" class="col-sm-3 col-form-label">Old password</label>
+                    <div class="col-sm-9">
+                        <div class="input-group mb-1 mb-sm-0">
+                            <input type="text" id="oldPassword" class="form-control" placeholder="Old Password"
+                                formControlName="oldPassword" />
+                        </div>
+                        <small class="text-danger"
+                            *ngIf="form.controls.oldPassword.errors && form.controls.oldPassword.touched">
+                            <div [hidden]="!form.controls['oldPassword'].errors.required">
+                                Old password required
+                            </div>
+                            <div [hidden]="!form.controls['oldPassword'].errors.minlength">
+                                Minimum passwor length required 6
+                            </div>
+                        </small>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="newPassword" class="col-sm-3 col-form-label">New password</label>
+                    <div class="col-sm-9">
+                        <div class="input-group mb-1 mb-sm-0">
+                            <input type="text" id="newPassword" class="form-control" placeholder="New Password"
+                                formControlName="newPassword" />
+                        </div>
+                        <small class="text-danger"
+                            *ngIf="form.controls.newPassword.errors && form.controls.newPassword.touched">
+                            <div [hidden]="!form.controls['newPassword'].errors.required">
+                                New password required
+                            </div>
+                            <div [hidden]="!form.controls['newPassword'].errors.minlength">
+                                Minimum passwor length required 6
+                            </div>
+                        </small>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary mx-1" [ngClass]="{ disabled: form.invalid }"> Change
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
