--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -21,12 +21,14 @@
         </div>
       </div>
     </div>
+    <!-- {{cart | json}} -->
     <div class="col-auto pt-2">
       <div class="cart form-inline mt-2 mt-md-0">
-        <input type="text" class="form-control" id="cart" placeholder="৳22000">
+        <label class="form-control">৳{{cart.sub_total}}</label>
+        <!-- <input type="text" class="form-control" id="cart" placeholder="৳22000"> -->
         <div class="input-group-append">
           <div class="input-group-text"><img class="search-icon" src="assets/images/svgs/basket.svg" alt="" /> &nbsp;
-            <span class="cart-count">12</span>
+            <span class="cart-count">{{cart?.poll}}</span>
           </div>
         </div>
       </div>
