--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -21,11 +21,10 @@
         </div>
       </div>
     </div>
-    <!-- {{cart | json}} -->
+    
     <div class="col-auto pt-2">
-      <div class="cart form-inline mt-2 mt-md-0">
-        <label class="form-control">৳{{cart.sub_total}}</label>
-        <!-- <input type="text" class="form-control" id="cart" placeholder="৳22000"> -->
+      <div class="cart form-inline mt-2 mt-md-0" (click)="onCartClick()">
+        <label class="form-control">৳{{cart?.sub_total}}</label>
         <div class="input-group-append">
           <div class="input-group-text"><img class="search-icon" src="assets/images/svgs/basket.svg" alt="" /> &nbsp;
             <span class="cart-count">{{cart?.poll}}</span>
