--- a/src/home/components/navbar/navbar.component.scss
+++ b/src/home/components/navbar/navbar.component.scss
@@ -17,9 +17,12 @@
 .form-control {
   width: 10rem;
 }
-
+.cart{
+  cursor: pointer;
+}
 .cart .form-control {
   width: 6rem;
+  cursor: pointer;
 }
 
 .search-box .form-control {
