out of stock show error message, Navbar cart info -> onclick navigate to cart page, Show popular categories at the bottom of the page

--- a/src/home/components/home-hero/home-hero.component.html
+++ b/src/home/components/home-hero/home-hero.component.html
@@ -3,7 +3,8 @@
     <div class="position-relative breakout-background-color">
       <div class="banner-full-outer">
         <picture>
-          <source media="(min-width: 1190px)" type="image/webp" srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3.webp?w=50% 1x,
+          <img src="assets/images/banners/home.png" >
+          <!-- <source media="(min-width: 1190px)" type="image/webp" srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3.webp?w=50% 1x,
                     //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3.webp 2x">
           <source media="(min-width: 1190px)" srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3?w=50% 1x,
                     //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3 2x">
@@ -15,7 +16,7 @@
                 //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_MOB_V3.webp?h={100%}&amp;w=1536&amp;sm=c&amp;$poi$ 2x">
           <img class="variable-width-crop carousel-item-image no-pointer-events" alt="Hero Carousel"
             srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_MOB_V3?h={50%}&amp;w=768&amp;sm=c&amp;$poi$ 1x,
-                            //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_MOB_V3?h={100%}&amp;w=1536&amp;sm=c&amp;$poi$ 2x">
+                            //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_MOB_V3?h={100%}&amp;w=1536&amp;sm=c&amp;$poi$ 2x"> -->
         </picture>
         <div class="banner-full-inner">
           <div class="content-width">
