--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
       <div class="cart form-inline mt-2 mt-md-0" (click)="onCartClick()">
         <label class="form-control">৳{{cart?.sub_total}}</label>
         <div class="input-group-append">
-          <div class="input-group-text"><img class="search-icon" src="assets/images/svgs/basket.svg" alt="" /> &nbsp;
+          <div class="input-group-text"><img class="search-icon" src="assets/images/svgs/cart.svg" alt="" /> &nbsp;
             <span class="cart-count">{{cart?.poll}}</span>
           </div>
         </div>
