--- a/src/home/containers/category/category.component.html
+++ b/src/home/containers/category/category.component.html
@@ -107,6 +107,17 @@
     </div>
     <div class="col-right">
       <loading *ngIf="loading"></loading>
+      <div class="alert alert-success" role="alert" *ngIf="errorMessage.length > 1">
+        {{errorMessage}}
+      </div>
+
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      
       <div class="row clearfix m-0" *ngIf="!loading && productPage">
         <div class="col-12 text-center" *ngIf="productPage.docs.length == 0">
           <i class="fa fa-frown-o"></i> Sorry no product found
@@ -122,3 +133,4 @@
     </div>
   </div>
 </div>
+<categories></categories>
