login page updated

--- a/src/home/containers/category/category.component.html
+++ b/src/home/containers/category/category.component.html
@@ -107,13 +107,13 @@
     </div>
     <div class="col-right">
       <loading *ngIf="loading"></loading>
-      <div class="alert alert-success" role="alert" *ngIf="errorMessage.length > 1">
+      <div class="alert alert-success" role="alert" >
         {{errorMessage}}
       </div>
 
-      <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="errorMessage.length > 1">
+        {{errorMessage}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onCloseClick()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
