--- a/src/home/components/home-hero/home-hero.component.html
+++ b/src/home/components/home-hero/home-hero.component.html
@@ -3,31 +3,15 @@
     <div class="position-relative breakout-background-color">
       <div class="banner-full-outer">
         <picture>
-          <img src="assets/images/banners/home.png" >
-          <!-- <source media="(min-width: 1190px)" type="image/webp" srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3.webp?w=50% 1x,
-                    //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3.webp 2x">
-          <source media="(min-width: 1190px)" srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3?w=50% 1x,
-                    //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3 2x">
-          <source media="(min-width: 768px)" type="image/webp" srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3.webp?w=50% 1x,
-                    //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3?w=50% 1x,
-                    //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_DESK_V3 2x">
-          <source media="(min-width: 320px)" type="image/webp"
-            srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_MOB_V3.webp?h={50%}&amp;w=768&amp;sm=c&amp;$poi$ 1x,
-                //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_MOB_V3.webp?h={100%}&amp;w=1536&amp;sm=c&amp;$poi$ 2x">
-          <img class="variable-width-crop carousel-item-image no-pointer-events" alt="Hero Carousel"
-            srcset="//assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_MOB_V3?h={50%}&amp;w=768&amp;sm=c&amp;$poi$ 1x,
-                            //assets.iceland.co.uk/i/iceland/ECOM_C5P3_SOHP_BIRTHDAY_HERO_MOB_V3?h={100%}&amp;w=1536&amp;sm=c&amp;$poi$ 2x"> -->
+          <img src="assets/images/banners/home.png" >          
         </picture>
         <div class="banner-full-inner">
           <div class="content-width">
             <div class="container d-flex justify-content-start align-items-end h-100 py-3">
               <div
                 class="px-3 d-flex justify-content-between justify-content-md-start align-items-center flex-row mx-auto mb-0 md-0">
-                <a href="https://www.iceland.co.uk/50th-birthday"
-                  onclick="dataLayer.push({event: 'promotionClick',eventCategory: 'Ecommerce',eventAction: 'Promotion Click',eventLabel: 'HP_Hero_1'});"
-                  class="btn btn-success auto-pointer-events mr-3 px-4">Shop Now</a>
-                <a href="https://www.iceland.co.uk/account" class="btn btn-secondary auto-pointer-events px-4">Sign
-                  In</a>
+                <a class="btn btn-success auto-pointer-events mr-3 px-4">Shop Now</a>
+                <a *ngIf="!isAuthenticated" class="btn btn-secondary auto-pointer-events px-4" routerLink="/login">Sign In</a>
               </div>
             </div>
           </div>
