--- a/src/home/containers/login/login.component.html
+++ b/src/home/containers/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row py-2">
+        <div class="col-auto d-flex align-items-center">
+            <i class="fa fa-angle-left"></i> &nbsp;
+            <a routerLink="/" class="home-link">Home</a>
+        </div>
+        <div class="col text-center">
+            <img class="logo" src="assets/images/logo.png" alt="" />
+        </div>
+    </div>
+</div>
+
+<login-form (create)="onLogin($event)"></login-form>
