few components created

--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -57,19 +57,19 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Free Delivery</a>
+          <a class="nav-link" routerLink="/free-delivery-products">Free Delivery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Offers</a>
+          <a class="nav-link" routerLink="/offers">Offers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">৳100 Value</a>
+          <a class="nav-link">৳100 Value</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#">Frozen</a>
-        </li>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="#">New</a>
+          <a class="nav-link"  routerLink="/new-products">New</a>
         </li>
 
       </ul>
