--- a/src/home/containers/index/index.component.html
+++ b/src/home/containers/index/index.component.html
@@ -1,3 +1,4 @@
-    <home-hero [isAuthenticated] = "authService.isAuthenticated()"></home-hero>
+<home-hero [isAuthenticated]="authService.isAuthenticated()"></home-hero>
 <categories></categories>
-<offers></offers>
+<front-special-offer></front-special-offer>
+<!-- <offers></offers> -->
