--- a/src/home/containers/category/category.component.html
+++ b/src/home/containers/category/category.component.html
@@ -20,7 +20,6 @@
   <div class="banner-image">
     <img [src]="'assets/images/categories/'+slug+'.jpg'" alt="Banner s">
   </div>
-  <!-- <img class="banner-image" src="assets/images/categories/fresh_banner.jpg" alt="Banner s"> -->
 </div>
 <div class="container">
   <div class="banner-title">{{categoryNav?.name}}</div>
@@ -107,9 +106,9 @@
     </div>
     <div class="col-right">
       <loading *ngIf="loading"></loading>
-      <div class="alert alert-success" role="alert" >
+      <!-- <div class="alert alert-success" role="alert" >
         {{errorMessage}}
-      </div>
+      </div> -->
 
       <div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="errorMessage.length > 1">
         {{errorMessage}}
