--- a/src/home/components/topbar/topbar.component.html
+++ b/src/home/components/topbar/topbar.component.html
@@ -1,73 +1,25 @@
 <div class="container">
   <div class="d-flex flex-row-reverse bd-highlight">
 
-    <div ngbDropdown class="p-2" *ngIf="!authService.isAuthenticated()">
+    <div ngbDropdown class="p-2" *ngIf="!authService.isAuthenticated()" placement="bottom-right">
       <a class="link user" tabindex="0" ngbDropdownToggle id="loginform" role="button">
         Login
       </a>
       <div ngbDropdownMenu aria-labelledby="loginform">
-        <h4 class="text-center text-primary">Log in</h4>
-        <p class="px-4 text-center">Sign in to see your favourites, complete your order or manage your account. </p>
-        <div class="alert alert-warning alert-dismissible fade show " role="alert" *ngIf="errorMessage.length>0">
+        <!-- <div class="alert alert-warning alert-dismissible fade show " role="alert" *ngIf="errorMessage.length>0">
           {{errorMessage}}
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onClickCloseErrorMessage()">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"
+            (click)="onClickCloseErrorMessage()">
             <span aria-hidden="true">&times;</span>
           </button>
-        </div>
-        <form class="px-4 pb-3" [formGroup]="form" (ngSubmit)="submit()">
-          <div class="form-group">
-            <!-- <label for="exampleDropdownFormEmail1">Email address</label> -->
-            <input type="text" class="form-control" id="phone" formControlName="phone" autocomplete="no"
-              placeholder="Phone number" maxlength="11">
-            <small class="text-danger" *ngIf=" form.controls.phone.errors && form.controls.phone.touched ">
-              <div [hidden]="!form.controls['phone'].errors.required"> Phone number required </div>
-              <div [hidden]="!form.controls['phone'].errors.pattern"> Phone number format 01934953023
-              </div>
-            </small>
-          </div>
-          <div class="form-group">
-            <!-- <label for="exampleDropdownFormPassword1">Password</label> -->
-            <div class="input-group mb-1 mb-sm-0">
-              <input [type]="showPassword ? 'text' : 'password'" id="password" class="form-control"
-                placeholder="Password" formControlName="password">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button" (click)="showPassword = !showPassword">
-                  <i class="fa fa-eye" [ngClass]="showPassword?'fa-eye-slash':'fa-eye'"></i>
-                </button>
-              </div>
-            </div>
-
-            <small class="text-danger" *ngIf="form.controls.password.errors && form.controls.password.touched">
-              <div [hidden]="!form.controls['password'].errors.required">
-                Password required
-              </div>
-              <div [hidden]="!form.controls['password'].errors.minlength">
-                Minimum passwor length required 6
-              </div>
-            </small>
-
-            <small>
-              <a routerLink="/password-reset">Lost your password?</a>
-            </small>
-          </div>
-          <!-- <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary" [class.disabled]="form.invalid">Log in</button>
-          </div> -->
-          <button type="submit" class="btn btn-block btn-sm btn-primary" [class.disabled]="form.invalid">Sign
-            in</button>
-          <!-- <a href="" class="my-2">Forgot Password?</a> -->
-        </form>
-        <div class="dropdown-divider"></div>
-        <div class="px-4">
-          <h4 class="text-center text-success">New to wada ? </h4>
-          <a routerLink="/register" class="btn btn-block btn-sm btn-success">Creat an Account</a>
-        </div>
+        </div> -->
+        <login-form (create)="onLogin($event)" [err]="errorMessage"></login-form>
       </div>
     </div>
     <div class="p-2" *ngIf="authService.isAuthenticated()" (click)="onLogout()">
       <a class="link user" title="Register"><span>Logout</span></a>
     </div>
-    <div class="m-2 border-right"></div>
+    <div class="my-2 border-right"></div>
     <div class="p-2" *ngIf="authService.isAuthenticated()">
       <a class="link user" routerLink="/dashboard" title="Register"><span>Dashboard</span></a>
     </div>
