offer component updated

--- a/src/home/components/home-hero/home-hero.component.html
+++ b/src/home/components/home-hero/home-hero.component.html
@@ -1,21 +1,29 @@
+<!-- <div class="container-fluid p-0 mb-4">
+  ​<picture>
+    <img class="img-fluid" src="assets/images/banners/home.png">
+  </picture>
+  <div class="container">
+    abc
+  </div>
+</div> -->
+
 <section class="home-hero">
-  <div class="amplienceContent">
-    <div class="position-relative breakout-background-color">
-      <div class="banner-full-outer">
+    <div class="position-relative">
+      <div>
         <picture>
-          <img src="assets/images/banners/home.png" >          
+          <img class="img-fluid" src="assets/images/banners/home.png">
         </picture>
         <div class="banner-full-inner">
           <div class="content-width">
             <div class="container d-flex justify-content-start align-items-end h-100 py-3">
               <div
                 class="px-3 d-flex justify-content-between justify-content-md-start align-items-center flex-row mx-auto mb-0 md-0">
-                <a class="btn btn-success auto-pointer-events mr-3 px-4">Shop Now</a>
-                <a *ngIf="!isAuthenticated" class="btn btn-secondary auto-pointer-events px-4" routerLink="/login">Sign In</a>
+                <a class="btn btn-sm btn-success auto-pointer-events mr-3 px-4">Shop Now</a>
+                <a *ngIf="!isAuthenticated" class="btn btn-sm btn-secondary auto-pointer-events px-4" routerLink="/login">Sign
+                  In</a>
               </div>
             </div>
           </div>
-        </div>
       </div>
     </div>
   </div>
