--- a/src/home/containers/login/login.component.html
+++ b/src/home/containers/login/login.component.html
@@ -9,5 +9,10 @@
         </div>
     </div>
 </div>
-
-<login-form (create)="onLogin($event)"></login-form>
+<div class="container">
+    <div class="row">
+        <div class="offset-md-4 col-md-4">
+            <login-form (create)="onLogin($event)"></login-form>
+        </div>
+    </div>
+</div>
